--- a/ios/Podfile
+++ b/ios/Podfile
@@ -12,6 +12,14 @@ target 'FirstRNProject' do
     :hermes_enabled => false
   )
 
+  pod 'RNReanimated', :path => '../node_modules/react-native-reanimated'
+
+  pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
+
+  pod 'RNScreens', :path => '../node_modules/react-native-screens'
+
+  pod 'react-native-safe-area-context', :path => '../node_modules/react-native-safe-area-context'
+
   target 'FirstRNProjectTests' do
     inherit! :complete
     # Pods for testing
