--- a/package.json
+++ b/package.json
@@ -10,10 +10,20 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^5.1",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/stack": "^5.1",
     "babel-eslint": "^10.1.0",
     "easemob-websdk": "^4.0.3",
     "react": "17.0.2",
-    "react-native": "0.66.4"
+    "react-native": "0.66.4",
+    "react-native-gesture-handler": "^2.3.2",
+    "react-native-paper": "^4.11.2",
+    "react-native-reanimated": "^2.5.0",
+    "react-native-safe-area-context": "^4.2.4",
+    "react-native-screens": "^3.13.1",
+    "react-navigation-material-bottom-tabs": "^2.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
